syntax = "proto3";

option java_multiple_files = false;
option java_package = "bitCask.proto";
option java_outer_classname = "WeatherStatusProto";
option objc_class_prefix = "WSP";

package proto;

message WeatherStatus {
  int64 station_id = 1;
  int64 s_no = 2;
  string battery_status = 3;
  int64 status_timestamp = 4;
  Weather weather = 5;
}

message Weather {
  float humidity = 1;
  float temperature = 2;
  float wind_speed = 3;
}